# bigquery_append

./: .gitignore  README.md  app.py  bq_manager.py  config_manager.py  database.py  pyproject.toml  requirements.txt
templates/: base.html  intro.html  jobs.html  schemas.html  settings_form.html  settings_list.html
